--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=com.basnukaev.fisrt.pet.project
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.user=postgres
+spring.flyway.password=postgres
